[project]
name = "prime-visualisation"
version = "0.1.0"
description = "Browser-based prime number visualisation"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.0", "plotly>=5.22.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths = ["tests"]
